# ai-agent-dba

./: README.md  requirements.txt
central-oracle-agent/: .gitignore  README.md  inventory.example.yml  pyproject.toml  requirements.txt
central-oracle-agent/audit/: audit-20260614T165346-f6685f.jsonl  audit-20260614T165547-92ae11.jsonl  audit-20260614T165840-96e549.jsonl  audit-20260614T165941-fc0224.jsonl
central-oracle-agent/audit-test/: audit-test.jsonl
central-oracle-agent/src/oracle_db_agent/: agent.py  agent_options.py  agentic.py  audit.py  cli.py  config.py  db.py  explain.py  license.py  loop_control.py  runbooks.py  scope.py
central-oracle-agent/src/oracle_db_agent/llm/: __init__.py  base.py  ollama.py  prompts.py
central-oracle-agent/src/oracle_db_agent/tools/: __init__.py  _compat.py  awr.py  base.py  health.py  observability.py  registry.py  runbook_tools.py  sessions.py  users.py
central-oracle-agent/tests/: test_agentic_loop.py  test_audit.py  test_explain.py  test_explain_sql_safety.py  test_inventory.py  test_ollama_client.py  test_prompts.py  test_runbooks.py
legacy-single-db-agent/: .env.example  .gitignore  pyproject.toml
legacy-single-db-agent/src/oracle_db_agent/: __init__.py  agent_options.py  config.py  db.py  intent.py
legacy-single-db-agent/src/oracle_db_agent/tools/: awr.py  health.py  sessions.py
legacy-single-db-agent/tests/: test_db_safety.py  test_intent.py
src/oracle_db_agent/: approval.py  cli.py  reporting.py
src/oracle_db_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/oracle_db_agent/tools/: base.py  (+4 more)
tests/: test_registry.py
