[project]
name = "central-oracle-agent"
version = "0.1.0"
description = "Central target-aware Oracle database agent with scoped execution and approval gates."
requires-python = ">=3.10"
dependencies = [
    "oracledb>=2.0.0",
    "openai>=1.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
central-oracle-agent = "oracle_db_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
