[project]
name = "oracle-db-agent"
version = "0.1.0"
description = "Interactive Oracle database operations agent with approval gates."
requires-python = ">=3.10"
dependencies = [
    "oracledb>=2.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
oracle-db-agent = "oracle_db_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
